@@ -1,11 +1,12 @@
 v3.3.2   (Jan Wolter - Dec 11, 2013)
 ----------------------------------------------
+ * Replaced reference to remote_ip field of the connection record with
+   useragent_ip, due to the elimination of remote_ip in Apache 2.4.1. Thanks
+   to davidsansome and cjwatson for pointing out the need for this.
  * Fixed a bug with setting of GROUP environment variable. Thanks to
    ddarbyson for reporting this, and Guoan Hu for posting the fix.
  * Added test/test.pipe.php, a PHP version of test/test.pipe contributed
    by Claus Andersen.
- * Added the FORWARDS environment variable for use with load balancing servers.
-   This patch contributed by Rogier Slag.
 
 v3.3.1   (Jan Wolter - Oct 12, 2011)
 ----------------------------------------------
